<resources>

    <string name="app_name">ESP Provisioning</string>
    <string name="app_name_ble">ESP BLE Prov</string>
    <string name="app_name_softap">ESP SoftAP Prov</string>

    <!-- Screen Titles -->
    <string name="title_activity_connect_device">Connect to Device</string>
    <string name="title_activity_pop">Proof of Possession</string>
    <string name="title_activity_wifi_scan_list">Select Wi-Fi Network</string>
    <string name="title_activity_wifi_config">Wi-Fi Configuration</string>
    <string name="title_activity_thread_config">Thread Network Configuration</string>
    <string name="title_activity_provisioning">Provisioning</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_device">Add Device</string>

    <!-- Button Text -->
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="btn_provision">Provision</string>
    <string name="btn_scan_qr_code">Scan QR Code</string>
    <string name="btn_provision_device">Provision New Device</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_connecting">Connecting&#8230;</string>
    <string name="btn_wifi_settings">Go to Wi-Fi Settings</string>
    <string name="btn_scan_again">Scan Again</string>
    <string name="btn_no_qr_code">I don\'t have a QR code</string>
    <string name="btn_save">Save</string>
    <string name="btn_change_prefix">Change</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_get_permission">Get Permission</string>
    <string name="btn_try_again">Try Again</string>

    <!-- Hint Text -->
    <string name="hint_pop">Proof of Possession</string>
    <string name="hint_ssid">Network Name</string>
    <string name="hint_value">Enter Value</string>
    <string name="hint_password">Password</string>

    <!-- Instruction Strings -->
    <string name="pop_instruction">Enter your proof of possession PIN for</string>
    <string name="setup_instructions">To complete setup of your device %1$s, please provide your Home Network\'s credentials.</string>
    <string name="connect_device_instruction_general">To provision your device, make sure it is turned ON. Connect your mobile phone to the Wi-Fi network with a name like PROV_XXXXXX</string>
    <string name="connect_device_instruction_specific">To provision your device, make sure it is turned ON. Connect your mobile phone to the Wi-Fi network with the name</string>

    <!-- Provisioning Steps Strings -->
    <string name="prov_step_1">Sending Wi-Fi credentials</string>
    <string name="prov_step_2">Applying Wi-Fi connection</string>
    <string name="prov_step_3">Checking provisioning status</string>
    <string name="error_session_creation">Failed to create session</string>
    <string name="error_prov_step_1">Failed to send Wi-Fi credentials</string>
    <string name="error_prov_step_2">Failed to apply Wi-Fi credentials</string>
    <string name="error_prov_step_3">Failed to provisioning device</string>
    <string name="error_prov_thread_step_1">Failed to send Thread credentials</string>
    <string name="error_prov_thread_step_2">Failed to apply Thread credentials</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_provision_landing">Connect to device</string>
    <string name="connected_to_device_instructions">You are now connected to the device. To provision the device, please enter your Network credentials on the next page.</string>
    <string name="no_internet_note">To make sure you are really connected to the device, please make sure you accept the system dialog informing you that network has no internet access.</string>
    <string name="connect_to_device_action">Connect</string>
    <string name="connected_to_device_action">Provision Network</string>
    <string name="title_activity_provision_instructions">Provision Instructions</string>
    <string name="ssid_hint_text">Network Name</string>
    <string name="password_hint_text">Password</string>
    <string name="provision">Provision</string>

    <string name="success_text">Device has been successfully provisioned!</string>
    <string name="wifi_disconnected_text">Please check the device indicators for provisioning status.</string>
    <string name="done">Done</string>

    <string name="enable_bluetooth_instructions">To provision your new device, please make sure that your Phone\'s Bluetooth is turned on and within range of your new device.</string>
    <string name="enabled_bluetooth_instructions">To provision the device, please enter your Network credentials on the next page.</string>
    <string name="enable_bluetooth_action">Enable</string>
    <string name="enabled_bluetooth_action">Provision Network</string>

    <!-- Strings used for Progress -->
    <string name="progress_scanning">Scanning Devices...</string>
    <string name="progress_get_status">Getting Status</string>
    <string name="progress_loading">Loading...</string>
    <string name="progress_thread_networks">Searching thread\nnetworks...</string>

    <!--Error Messages-->
    <string name="error_title">Error!</string>
    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
    <string name="error_device_transport_not_supported">Device may not be supported.</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="error_unknown">Device provisioning failed. Reason : Unknown.</string>
    <string name="error_pop_incorrect">Please retry with correct proof of possession PIN.</string>
    <string name="error_no_ble_device">No Bluetooth devices found!</string>
    <string name="error_device_connect_failed">Failed to connect with device.</string>
    <string name="error_ssid_empty">Network name cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_provisioning">Reset your board to factory defaults and retry</string>
    <string name="error_wifi_off">Please turn on Wi-Fi to connect with device.</string>
    <string name="error_security_mismatch">Security applied for communicating with device does not match configuration setting</string>
    <string name="error_camera_permission">Camera permission is not given. App will not be able to scan QR code to add device.</string>
    <string name="error_location_permission">Location permission is not given. It will be required to add BLE or SoftAP devices.</string>
    <string name="error_no_preferred_creds">No thread network added</string>
    <string name="error_read_preferred_creds_request_denied">You have denied request for reading thread credentials</string>
    <string name="error_no_thread_network">No Active Thread Border Router</string>
    <string name="error_dataset_invalid">Invalid Dataset</string>

    <string name="prefix">Prefix :</string>
    <string name="hint_prefix">Enter Prefix</string>
    <string name="hint_key">Enter PIN</string>
    <string name="devices_title">Devices</string>
    <string name="enter_device_key">Enter Your Proof Of Possession PIN</string>
    <string name="app_version">App Version</string>
    <string name="powered_by_esp">Powered by ESPRESSIF</string>

    <string name="join_other_network">Join Other Network</string>
    <string name="networks">Networks</string>
    <string name="connect_your_device">Connect to your device</string>

    <string name="dialog_msg_gps">Location services are disabled. Please enable them to continue</string>
    <string name="dialog_msg_device_selection">Select Device Type</string>
    <string name="looking_for_qr_code">Looking for QR Code</string>
    <string name="position_camera_for_qr_code">Please position the camera to point at the QR Code.</string>
    <string name="dialog_title_network_info">Enter Network Information</string>
    <string name="dialog_msg_ble_device_disconnection">Device disconnected</string>

    <!-- Preference Titles -->
    <string name="device_settings">Device Settings</string>

    <!-- Messages Preferences -->
    <string name="device_selection_title">Supported Device Types</string>
    <string name="security_selection_title">Encrypted Communication</string>
    <string name="username_wifi_pref_title">Sec2 Username for Wi-Fi</string>
    <string name="username_thread_pref_title">Sec2 Username for Thread</string>
    <string name="username_selection_title">Username</string>
    <string name="summary_secured">Secured</string>
    <string name="summary_unsecured">Unsecured</string>
    <string name="summary_username">(Applicable for security version 2)</string>

</resources>
