<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/tool_bar_main_purple" />

    <FrameLayout
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="32dp">

            <ImageView
                android:id="@+id/iv_provisioning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_provisioning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <LinearLayout
                android:id="@+id/layout_prov_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_provisioning">

                <LinearLayout
                    android:id="@+id/layout_sending_wifi_creds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_tick_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_checkbox_unselected" />

                            <androidx.core.widget.ContentLoadingProgressBar
                                android:id="@+id/prov_progress_1"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:visibility="visible" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/prov_step_1"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_prov_error_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:textColor="@color/color_orange"
                        android:textSize="12sp"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_applying_wifi_creds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_tick_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_checkbox_unselected" />

                            <androidx.core.widget.ContentLoadingProgressBar
                                android:id="@+id/prov_progress_2"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:visibility="gone" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/prov_step_2"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_prov_error_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:textColor="@color/color_orange"
                        android:textSize="12sp"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_checking_provisioning_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_tick_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_checkbox_unselected" />

                            <androidx.core.widget.ContentLoadingProgressBar
                                android:id="@+id/prov_progress_3"
                                style="?android:attr/progressBarStyle"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:visibility="gone" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/prov_step_3"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_prov_error_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:textColor="@color/color_orange"
                        android:textSize="12sp"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_prov_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8sp"
                android:text="@string/error_provisioning"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_prov_process" />

            <include
                android:id="@+id/btn_ok"
                layout="@layout/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_prov_error" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
